--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "license": "MIT",
     "author": {
         "name": "Refueled",
-        "email": "info@refueled.net",
+        "email": "nate@refueled.net",
         "url": "https://refueled.net"
     },
     "keywords": [
@@ -42,11 +42,6 @@
         "custom": {
             "footer_text": {
                 "type": "text"
-            },
-            "dark_mode": {
-                "type": "select",
-                "options": ["Default", "Dark Mode"],
-                "default": "Default"
             }
         }
     }
